force-app/main/default/objects/AuraFileUploadTracker__c/AuraFileUploadTracker__c.object-meta.xml
<CustomObject>
    <label>Aura File Upload Tracker</label>
    <nameField>
        <displayFormat>FileUpload-{0000}</displayFormat>
        <label>File Upload Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Aura File Upload Tracker</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>