force-app/main/default/objects/AuraFileUploadTracker__c/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Aura File Upload Tracker</relationshipLabel>
    <relationshipName>Aura_File_Upload_Tracker</relationshipName>
    <type>Lookup</type>
</CustomField>