force-app/main/default/objects/AuraFileUploadTracker__c/fields/Deactivated__c.field-meta.xml
<CustomField>
    <fullName>Deactivated__c</fullName>
    <formula>AccountId__r.Deactivated__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deactivated</label>
    <type>Checkbox</type>
</CustomField>