force-app/main/default/objects/AuraFileUploadTracker__c/fields/isLwcActive__c.field-meta.xml
<CustomField>
    <fullName>isLwcActive__c</fullName>
    <formula>AccountId__r.IsLWCActive__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isLwcActive</label>
    <type>Checkbox</type>
</CustomField>