force-app/main/default/objects/AuraFileUploadTracker__c/fields/IsMSTeamCreated__c.field-meta.xml
<CustomField>
    <fullName>IsMSTeamCreated__c</fullName>
    <formula>AccountId__r.IsMSTeamCreated__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsMSTeamCreated</label>
    <type>Checkbox</type>
</CustomField>