force-app/main/default/objects/AuraFileUploadTracker__c/fields/isWidgetActive__c.field-meta.xml
<CustomField>
    <fullName>isWidgetActive__c</fullName>
    <formula>AccountId__r.isWidgetActive__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isWidgetActive</label>
    <type>Checkbox</type>
</CustomField>