force-app/main/default/objects/AuraFileUploadTracker__c/fields/MailNickName__c.field-meta.xml
<CustomField>
    <fullName>MailNickName__c</fullName>
    <formula>AccountId__r.MailNickName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MailNickName</label>
    <type>Text</type>
</CustomField>