force-app/main/default/objects/AuraFileUploadTracker__c/fields/Related_AccountId__c.field-meta.xml
<CustomField>
    <fullName>Related_AccountId__c</fullName>
    <label>Related AccountId</label>
    <type>TextArea</type>
</CustomField>