force-app/main/default/objects/AuraFileUploadTracker__c/fields/SiteURL__c.field-meta.xml
<CustomField>
    <fullName>SiteURL__c</fullName>
    <formula>AccountId__r.SiteURL__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SiteURL</label>
    <type>Text</type>
</CustomField>