force-app/main/default/objects/AuraFileUploadTracker__c/fields/SPGroupID__c.field-meta.xml
<CustomField>
    <fullName>SPGroupID__c</fullName>
    <formula>AccountId__r.SPGroupID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SPGroupID</label>
    <type>Text</type>
</CustomField>